# Makefile.am: Testsuite subdirectory automake template for the ed line editor.
#
# Copyright © 1993-2017 Andrew L. Moore, SlewSys Research
#
# Process this file with automake to create Makefile.in.

AUTOTEST     = $(AUTOM4TE) --language=autotest
PACKAGE_M4   = package.m4
TESTSUITE    = testsuite
TESTSUITE_AT = $(TESTSUITE).at

# Templates for generating autotest .at scripts.
AT_PROTO_OK   = $(srcdir)/proto.ok-at.in
AT_PROTO_ERR  = $(srcdir)/proto.err-at.in
AT_PROTO_FAIL = $(srcdir)/proto.fail-at.in

SUFFIXES = .t .err .ok-at .err-at .fail-at

# The following GNU make rules generate a location-independent version
# of testsuite which is invoked from $(top_builddir) via:
#
#     $ make check
#
# These rules should remain uncommented unless generating a
# distribution version of testsuite (q.v., see below).
#
# Please update $(top_srcdir)/testsuite/ts-am-sw.in to reflect any
# changes in the format of this file.
#
.t.ok-at:
	sed -e "s^@SCRIPT_NAME@^$*^g"                                         \
	    -e "s^@SCRIPT_SRC@^$(abs_srcdir)/$*^g" "$(AT_PROTO_OK)"           \
	    >"$@".tmp
	mv "$@".tmp "$@"

.err.err-at:
	sed -e "s^@SCRIPT_NAME@^$*^g"                                         \
	    -e "s^@SCRIPT_SRC@^$(abs_srcdir)/$*^g" "$(AT_PROTO_ERR)"          \
	    >"$@".tmp
	mv "$@".tmp "$@"

.err.fail-at:
	sed -e "s^@SCRIPT_NAME@^$$(basename $*)^g"                            \
	    -e "s^@SCRIPT_SRC@^$(abs_srcdir)/$*^g" "$(AT_PROTO_FAIL)"         \
	    >"$@".tmp
	mv "$@".tmp "$@"

# The following GNU make rules generate a location-dependent version
# of testsuite, `testsuite-dist'. Iff the distribution is built from
# $(top_srcdir), testsuite-dist is invoked from $(top_srcdir) via:
#
#     $ make quick-check
#
# Testsuite-dist is provided because generating a location-independent
# testsuite requires both GNU make and autoconf tools.
#
# These rules should remain commented out unless generating a
# distribution version of testsuite.
#
# Please update $(top_srcdir)/testsuite/ts-am-sw.ed to reflect any
# changes in the format of this file.
#
#.t.ok-at:
#	sed -e "s^@SCRIPT_NAME@^$*^g"                                         \
#	    -e "s^@SCRIPT_SRC@^../../$*^g" "$(AT_PROTO_OK)"                   \
#	>"$@".tmp
#	mv "$@".tmp "$@"
#
#.err.err-at:
#	sed -e "s^@SCRIPT_NAME@^$*^g"                                         \
#	    -e "s^@SCRIPT_SRC@^../../$*^g" "$(AT_PROTO_ERR)"                  \
#	>"$@".tmp
#	mv "$@".tmp "$@"
#
#.err.fail-at:
#	sed -e "s^@SCRIPT_NAME@^$*^g"                                         \
#	    -e "s^@SCRIPT_SRC@^../../$*^g" "$(AT_PROTO_FAIL)"                 \
#	>"$@".tmp
#	mv "$@".tmp "$@"

# Ed scripts which should complete sucessfully.
ED_SCRIPTS_OK =                                                               \
	a.t addr.t ascii.t bang1.t c1.t c2.t comment.t d.t e1.t e2.t          \
	e3.t e4.t e5.t g1.t g2.t g3.t g4.t g5.t i1.t i2.t j.t k.t l.t         \
	m.t n.t nl1.t nl2.t nl3.t nl4.t p.t q2.t r1.t r2.t r3.t s1.t          \
	s2.t s3.t s4.t s5.t s6.t t1.t t2.t u.t v.t w.t

# Ed scripts which should complete, but with non-zero exit status.
ED_SCRIPTS_ERR =                                                              \
	a2.err addr1.err addr2.err bang1.err c1.err d.err                     \
	e1.err e2.err e3.err f1.err f2.err g1.err g2.err g3.err h.err         \
	i2.err k2.err k3.err k4.err m.err q1.err r2.err s1.err s10.err        \
	s3.err s4.err s5.err s6.err s7.err s8.err t1.err t2.err		      \
	u.err w1.err w2.err w3.err z.err

# Ed scripts which should fail.
ED_SCRIPTS_FAIL = $(ED_SCRIPTS_ERR)

# Autotest .at scripts generated by embedding an ed script in a
# corresponding autotest template (cf. $(TESTSUITE_AT) rule below).
AT_SCRIPTS_OK   = $(ED_SCRIPTS_OK:.t=.ok-at)
AT_SCRIPTS_ERR  = $(ED_SCRIPTS_ERR:.err=.err-at)
AT_SCRIPTS_FAIL = $(ED_SCRIPTS_ERR:.err=.fail-at)

EXTRA_DIST = $(TESTSUITE)

.PHONY: build-and-run-testsuite quick-check

check-local:
	if $(MAKE) --version 2>&1 | grep -qi 'gnu make'; then                 \
	  $(MAKE) $(AM_MAKEFLAGS) build-and-run-testsuite;                    \
	else                                                                  \
	  if test _"@GNU_MAKE_COMMAND@" != _''; then                          \
	    @GNU_MAKE_COMMAND@ $(AM_MAKEFLAGS) build-and-run-testsuite;       \
	  elif test _"@abs_top_srcdir@" = _"@abs_top_builddir@"; then         \
	    $(MAKE) $(AM_MAKEFLAGS) quick-check;                              \
	  else                                                                \
	    echo "Running testsuite outside $$top_srcdir requires GNU make."; \
	  fi;                                                                 \
	fi

build-and-run-testsuite: atconfig $(TESTSUITE)
	$(SHELL) $(TESTSUITE)

$(TESTSUITE): $(TESTSUITE_AT) $(PACKAGE_M4)
	$(AUTOTEST) -I $(srcdir) "$@".at -o "$@".tmp
	mv "$@".tmp "$@"

$(TESTSUITE_AT): $(AT_SCRIPTS_OK) $(AT_SCRIPTS_ERR) $(AT_SCRIPTS_FAIL)
	{                                                                     \
	  echo 'AT_INIT';                                                     \
	  echo 'AT_TESTED([ed])';                                             \
	} >"$@".tmp
	for scpt in $(AT_SCRIPTS_OK) $(AT_SCRIPTS_ERR) $(AT_SCRIPTS_FAIL); do \
	  echo "m4_include([$$scpt])";                                        \
	done >>"$@".tmp
	mv "$@".tmp "$@"

$(PACKAGE_M4): $(top_srcdir)/configure.ac
	{                                                                     \
	  echo '# Signature of the current package.';                         \
	  echo 'm4_define([AT_PACKAGE_NAME], [@PACKAGE_NAME@])';              \
	  echo 'm4_define([AT_PACKAGE_TARNAME], [@PACKAGE_TARNAME@])';        \
	  echo 'm4_define([AT_PACKAGE_VERSION], [@PACKAGE_VERSION@])';        \
	  echo 'm4_define([AT_PACKAGE_STRING], [@PACKAGE_STRING@])';          \
	  echo 'm4_define([AT_PACKAGE_BUGREPORT], [@PACKAGE_BUGREPORT@])';    \
	} >"$@".tmp
	mv "$@".tmp "$@"

quick-check:
	if test -f $(TESTSUITE)-dist; then                                    \
	  $(SHELL) $(TESTSUITE)-dist;                                         \
	else                                                                  \
	  $(MAKE) $(AM_MAKEFLAGS) check-local;                                \
	fi

distclean-local:
	rm atconfig

clean-local:
	rm -rf *.ok-at *.fail-at *.err-at *.dir *.log
	rm -f $(PACKAGE_M4) $(TESTSUITE_AT) $(TESTSUITE)
